test/valid/maybe.js
var x;

x = 2;

var y = 2;

x = y;
