test/invalid/builtins/plusplus.js
var x = false;
var y = x++;
